--- a/crates/ethereum-engine/Cargo.toml
+++ b/crates/ethereum-engine/Cargo.toml
@@ -7,58 +7,61 @@ license = "Apache-2.0"
 edition = "2018"
 
 [dependencies]
-hex = "0.3.2"
-web3 = "0.8.0"
-log = "0.4.6"
-tokio = { version = "0.2.8", features = ["macros", "rt-core", "time"] }
-hyper = "0.13"
-futures = { version = "0.3", features = ["compat"] }
-interledger-service = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
-interledger-http = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
-interledger-settlement = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master", default-features = false  }
-interledger-errors = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master", default-features = false  }
-ethabi = "8.0.1"
+# ilp deps
+interledger-service = { git = "https://github.com/interledger-rs/interledger-rs", branch = "gakonst/remove-statics" }
+interledger-http = { git = "https://github.com/interledger-rs/interledger-rs", branch = "gakonst/remove-statics" }
+interledger-settlement = { git = "https://github.com/interledger-rs/interledger-rs", branch = "gakonst/remove-statics", default-features = false  }
+interledger-errors = { git = "https://github.com/interledger-rs/interledger-rs", branch = "gakonst/remove-statics", default-features = false  }
+
+# eth deps
+ethers = { path = "../../../ethers/ethers" }
+
+# misc
+parking_lot = "0.9.0"
 serde = { version = "1.0.101", default-features = false }
 serde_json = { version = "1.0.41", default-features = false }
-json = "0.11.14"
-bytes = "0.5"
-ring = "0.16.9"
-url = "2.1.0"
-reqwest = "0.10"
-env_logger = "0.6.2"
-uuid = { version = "0.8.1", features = ["serde", "v4"]  }
-tokio-retry = "0.2.0"
-redis_crate = { package = "redis", version = "0.15.1", features = ["tokio-rt-core"], optional = true }
-http = "0.2"
-clap = "2.32.0"
-clarity = "0.1.22"
-sha3 = "0.8.2"
-num-bigint = "0.2.2"
-num-traits = "0.2.8"
-lazy_static = "1.4.0"
-secrecy = { version = "0.6", features = ["serde", "bytes"] }
-zeroize = { version = "1.0.0" }
-parking_lot = "0.9.0"
-config = { version = "0.9.3", features = [ "json", "yaml" ] }
-libc = "0.2.62"
-tiny-keccak="1.4.2"
-secp256k1 ="0.15.5"
-rlp ="0.4.2"
-ethereum-types ="0.6.0"
-warp = "0.2"
-async-trait = "0.1.22"
+tokio = { version = "0.2.21", features = ["macros", "rt-core", "time"] }
+thiserror = "1.0.19"
 
+# API related
+futures = { version = "0.3", features = ["compat"] }
+tokio-retry = "0.2.0"
+http = "0.2.1"
+
+log = "0.4.6"
+async-trait = "0.1.31"
+reqwest = "0.10"
+url = "2.1.1"
+uuid = { version = "0.8.1", features = ["serde", "v4"]  }
+num-bigint = "0.2.2"
+
+# CLI
+gumdrop = "0.8.0"
+env_logger = "0.6.2"
+
+# ..rest are optional
+warp = { version = "0.2.3", optional = true }
+redis_crate = { package = "redis", version = "0.15.1", features = ["tokio-rt-core"], optional = true }
+secrecy = { version = "0.6", features = ["serde", "bytes"], optional = true }
+bytes = { version = "0.5", optional = true }
+anyhow = "1.0.31"
+once_cell = "1.4.0"
+
+
+#kjson = "0.11.14"
+# http = "0.2"
+# sha3 = "0.8.2"
+# num-traits = "0.2.8"
+# zeroize = { version = "1.0.0" }
 
 [dev-dependencies]
-lazy_static = "1.3"
-mockito = "0.20.0"
-parking_lot = "0.9.0"
+mockito = "0.25.2"
 net2 = "0.2.33"
-os_type = "2.2.0"
 rand = "0.7.0"
-interledger = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
-ilp-node = { git = "https://github.com/interledger-rs/interledger-rs", branch = "master" }
+hex = "0.4.2"
+interledger = { git = "https://github.com/interledger-rs/interledger-rs", branch = "gakonst/remove-statics" }
+ilp-node = { git = "https://github.com/interledger-rs/interledger-rs", branch = "gakonst/remove-statics" }
 
 [features]
 default = ["redis"]
-redis = ["redis_crate", "interledger-settlement/redis", "interledger-settlement/backends_common"]
+redis = ["bytes", "warp", "redis_crate", "secrecy", "interledger-settlement/backends_common"]
